--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,4 +33,6 @@ repositories {
 dependencies {
     implementation 'com.facebook.react:react-native:+'
     implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.1.0"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
